--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -21,6 +21,7 @@ ja:
       department: 部署
       office: オフィス
       profile: プロフィール
+      article: 記事
     attributes:
       employee:
         number: 社員番号
@@ -36,3 +37,7 @@ ja:
         news_posting_auth: お知らせ投稿権限
       profile:
         profile: プロフィール
+      article:
+        title: タイトル
+        content: 内容
+        author: 投稿者
